Update 'cu2rongdz-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ebf404ab27.mquk.p3.openshiftapps.com/rhtap/rhtap-qe:08101b588d2826be5bf6f781ec80fa22d7b1582a@sha256:7212363872e6cd92c7da682726b1515ed3cc35e261aee7278e9513fd4725077c

--- a/components/cu2rongdz-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/cu2rongdz-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: cu2rongdz-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ebf404ab27.mquk.p3.openshiftapps.com/rhtap/rhtap-qe:08101b588d2826be5bf6f781ec80fa22d7b1582a@sha256:7212363872e6cd92c7da682726b1515ed3cc35e261aee7278e9513fd4725077c
+          name: container-image
